Provisional proofs for Lemma 5 and Corollary 2

--- a/header.tex
+++ b/header.tex
@@ -47,7 +47,8 @@
 \newcommand{\mylemma}{Lemma~}
 \newcommand{\mytheorem}{Theorem~}
 \newcommand{\myequation}{Equation~}
-\newcommand{\myalgorithm}{Fi\usepackage{amsmath}gure~}
+%\newcommand{\myalgorithm}{Fi\usepackage{amsmath}gure~} % what the hell???
+\newcommand{\myalgorithm}{Figure~}
 \newcommand{\myexample}{Example~}
 \fi
 
