--- a/osr-correctness.tex
+++ b/osr-correctness.tex
@@ -20,8 +20,7 @@ As we observed in \mysection\ref{ss:osr-llvm-approach}, the OSR practice often m
 \input{osr-mapping-correctness}
 \input{osr-lve-examples}
 \input{osr-composition}
-
-\subsection{Multi-Version Programs}
+\input{osr-multiprogram}
 
 \subsection{LLVM Implementation}
 
