--- a/osr-composition.tex
+++ b/osr-composition.tex
@@ -53,6 +53,7 @@ Hence, $\mu_{\pi\pi'}\circ\mu_{\pi'\pi''}$ is an OSR mapping from $\pi$ to $\pi'
 \end{myproof}
 
 \begin{corollary}
+\label{co:compose-strict}
 Let $\pi,\pi',\pi''\in Prog$, let $\mu_{\pi\pi'}$ and $\mu_{\pi'\pi''}$ be strict OSR mappings as in \mydefinition\ref{de:osr-mapping}. Then $\mu_{\pi\pi'}\circ\mu_{\pi'\pi''}$ is a strict OSR mapping from $\pi$ to $\pi''$.
 \end{corollary}
 \begin{myproof}
