--- a/osr-multiprogram.tex
+++ b/osr-multiprogram.tex
@@ -88,9 +88,43 @@ A natural way to generate a multi-version program consists in starting from a ba
 
 \begin{lemma}
 \label{le:comp-lemma}
-Let $\tau\in{\cal T}_{\Pi,\sigma}$ be an execution trace in the system of the traces for the multi-version program $\Pi$ $=({\cal V}, {\cal E}, {\cal M})$ constructed using \dopasses\ and LVE transformations, and let $\omega_1,\ldots,\omega_k$ be the indices of $\tau$ where an OSR transition has just occurred. Then $\forall i\in[1,k]$ there exists a state $(\hat{\sigma}_i,\hat{l}_i)$ in the trace of $\hat{\pi}_i=\pi_{p_{\omega_{i}}}$ starting from the initial store $\sigma$ such that $\hat{l}_i=l_{\omega_i}$ and $\hat{\sigma}_i\vert_{\live(\hat{\pi}_i,\hat{l}_i)}=\sigma_{\omega_i}\vert_{\live(\hat{\pi}_i,\hat{l}_i)}$.
+Let $\tau\in{\cal T}_{\Pi,\sigma}$ be an execution trace in the system of the traces for the multi-version program $\Pi$ $=({\cal V}, {\cal E}, {\cal M})$ constructed using \dopasses\ and LVE transformations, and let $\omega_1,\ldots,\omega_k$ be the indices of $\tau$ where an OSR transition has just occurred, with $\tau[\omega_i]=(p_{\omega_i}, \sigma_{\omega_i}, l_{\omega_i})$. Then $\forall i\in[1,k]$ there exists a state $(\hat{\sigma}_i,\hat{l}_i)$ in the trace of $\pi_{p_{\omega_{i}}}$ starting from the initial store $\sigma$ such that $\hat{l}_i=l_{\omega_i}$ and $\hat{\sigma}_i\vert_{\live(\pi_{p_{\omega_{i}}},\hat{l}_i)}=\sigma_{\omega_i}\vert_{\live(\pi_{p_{\omega_{i}}},\hat{l}_i)}$.
 \end{lemma}
 \begin{myproof}
+To simplify the notation we introduce:
+\begin{equation*}
+\hat{\pi}_i = \begin{cases}
+\pi_1 & \text{if } i=0\\
+\pi_{p_{\omega_i}} & \text{if } i \in [1,k]
+\end{cases}
+\end{equation*}
+
+\noindent From \ref{eq:mv-big-step} we can write that $\tau[\omega_i]=(p_{\omega_i}, \sigma_{\omega_i},l_{\omega_i-1})$ has been obtained from $\tau[\omega_i-1]=(p_{\omega_i-1}, \sigma_{\omega_i-1}, l_{\omega_i-1})$ with $\sigma_{\omega_i}=\mysem{\chi_{\omega_i-1}}(\sigma_{\omega_i})$. For each OSR transition $\hat{\pi}_i$ has been obtained from $\hat{\pi}_{i-1}$ using \dopasses\ for some sequence $L$ of LVE transformations. Indeed, in order for \ref{eq:mv-big-step} to apply:
+\begin{align*}
+(\hat{\pi}_{i-1},\hat{\pi}_i)\in{\cal E} ~\wedge~ \exists L: ~&{\tt do\_passes}(\hat{\pi}_{i-1}, L-1)=(\hat{\pi}_i,\mu_{\hat{\pi}_{i-1}\hat{\pi}_i},{\mu'}_{\hat{\pi}_{i}\hat{\pi}_{i-1}}) ~\wedge~\\
+&M(\hat{\pi}_{i-1},\hat{\pi}_i)=\mu_{\hat{\pi}_{i-1}\hat{\pi}_i}
+\end{align*}
+
+\noindent When the OSR step is performed we thus have:
+\begin{equation*}
+M(\hat{\pi}_{i-1},\hat{\pi}_i)(l_{\omega_i-1})=\mu_{\hat{\pi}_{i-1}\hat{\pi}_i}(l_{\omega_i-1})=(l_{\omega_i},\chi_{\omega_i-1})
+\end{equation*}
+
+\noindent By \ref{th:osr-trans-correctness} function $\mu_{\hat{\pi}_{i-1}\hat{\pi}_i}$ provides a strict OSR mapping between $\hat{\pi}_{i-1}$ and $\hat{\pi}_i$, as all LVE transformations in L are composed into a strict mapping (\ref{co:compose-strict}). Note also that since $\Delta_I$ is being used to map OSR program points between $\hat{\pi}_{i-1}$ and $\hat{\pi}_i$, it follows that $l_{\omega_i}=l_{\omega_i-1}~\forall i\in[1,k]$.
+We now prove our claim by induction on $i$.
+
+\paragraph*{Base step.} When $i=1$, we know that no OSR transition has been performed till $l_{\omega_1-1}$ and thus $\hat{\pi}_0$ has been executing all the time. Then we can write:
+\begin{equation*}
+(1, \sigma, 1)\trans^*_{\Pi}(1,\sigma_{\omega_1-1},l_{\omega_1-1}) \Longleftrightarrow (\sigma, 1) \trans^*_{\hat{\pi}_0} (\sigma_{\omega_1-1},l_{\omega_1-1})
+\end{equation*}
+
+\noindent Trivially, $(\sigma_{\omega_1-1},l_{\omega_1-1})\in\tau_{\hat{\pi}_0\sigma}$. We can thus infer from \ref{de:osr-mapping}:
+\begin{align*}
+\exists s_j=(\sigma_j,l_j)\in\tau_{\hat{\pi}_1\sigma}~\text{s.t.}~&\mu_{\hat{\pi}_{0}\hat{\pi}_1}=(l_j,\chi)~\wedge \\
+&\mysem{\chi}(\sigma_{\omega_1-1}\vert_{\live(\hat{\pi}_{0},l_{\omega_1-1})})=\sigma_l\vert_{\live(\hat{\pi}_{1},l_j)}
+\end{align*}
+
+
 \missing
 \end{myproof}
 
