--- a/header.tex
+++ b/header.tex
@@ -104,6 +104,7 @@
 \newcommand{\mysem}[1]{[\![#1]\!]}
 \newcommand{\lve}{\text{LVE}}
 \newcommand{\live}{\mytt{live}}
+\newcommand{\islive}{\mytt{is\_live}}
 \newcommand{\ureachdef}{\mytt{urdef}}
 \newcommand{\dom}{\mytt{dom}}
 \newcommand{\stmt}{\mytt{stmt}}
