--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1349,3 +1349,9 @@
   title = {{{PEP}: continuous path and edge profiling}},
   note = {\url{http://jikesrvm.org/Research+Archive}}
 }
+
+@misc{shootout,
+  author = {Fulgham, Brent and Gouy, Isaac},
+  title = {{The {C}omputer {L}anguage {B}enchmarks {G}ame}},
+  note = {\url{http://benchmarksgame.alioth.debian.org/}. Accessed: 2016-03-25},
+}
