--- a/experiments.tex
+++ b/experiments.tex
@@ -12,6 +12,5 @@ Finally, we present an extensive experimental evaluation of our OSR techniques f
 \ifdefined \noauthorea
 \input{hcct-evaluation}
 \input{kblpp-evaluation}
+\input{osr-evaluation}
 \fi
-
-\section{On-Stack Replacement}
