--- a/header.tex
+++ b/header.tex
@@ -90,6 +90,7 @@
 \newcommand{\osrkit}{{\sf OSRKit}}
 \newcommand{\tinyvm}{{\sf TinyVM}}
 \newcommand{\clang}{{\tt clang}}
+\newcommand{\shootout}{{\tt shootout}}
 \newcommand{\fbase}{$\textsf{f}$}
 \newcommand{\fvariant}{$\textsf{f'}$}
 \newcommand{\fosrfrom}{$\textsf{f}_{\textsf{from}}$}
